<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_2_5"
    tools:context=".analyzetext.presentation.PlainTextAnalyzeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_2_5"
            android:text="@string/content_hint"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/btn_process"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_marginTop="@dimen/default_4_5"
        app:layout_constraintTop_toBottomOf="@id/container_top_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_char_array_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/char_array_title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_char_array_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_1_5"
                android:text="@string/result_hint" />

            <TextView
                android:id="@+id/tv_words_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_4_5"
                android:text="@string/words_count_title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_words_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_1_5"
                android:text="@string/result_hint" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>